--- a/petfax/templates/show.html
+++ b/petfax/templates/show.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
 </head>
 <body>
     {% if pet %}
     <h2>{{pet.pet_name}}</h2>
     <img src="{{pet.pet_photo}}" alt="Photo of a pet" />
     <p>{{pet.pet_fact}}</p>
+    <p><a href="/pets/">Go Back</a></p>
     {% else %}
     <h1>not working</h1>
     {%endif%}
