--- a/petfax/templates/index.html
+++ b/petfax/templates/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
 </head>
 <body>
     <h1>Welcome to PetFax</h1>
-    {% for pet in pets %}
-        <h2>{{ pet.pet_name }}</h2>
-        <a href="/pets/{{pet.pet_id}}">{{pet.pet_name}}</a>
-        <img src="{{ pet.pet_photo }}" alt="Photo of pet"/>
-    {% endfor %}
+    <div class="design">
+        {% for pet in pets %}
+            <h2><a href="/pets/{{pet.pet_id}}">{{pet.pet_name}}</a></h2>
+            <img src="{{ pet.pet_photo }}" alt="Photo of pet"/>
+        {% endfor %}
+        <a href="/pets/form">Add more pets!</a>
+    </div>
 </body>
 </html>
