--- a/petfax/templates/facts/form.html
+++ b/petfax/templates/facts/form.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h1>Edit your pet</h1>
-    <form action="/pets/" method="GET">
+    <form action="/facts" method="POST">
         <label for="Name">NAME</label>
         <input type="text" name="name" id="pet-name">
         <label for="Name">FACTS</label>
         <input type="text" name="information" id="pet-information">
-        <input type="button" value="Submit" placeholder="Submit">
+        <input type="submit" value="submit" placeholder="Submit">
     </form>
-    <p><a href="/pets/">Return to Pets</a></p>
+    <p><a href="/pets/"> << Return to Pets</a></p>
     
 </body>
 </html>
