--- a/petfax/templates/facts/form.html
+++ b/petfax/templates/facts/form.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Edit your pet</h1>
     <form action="/facts" method="POST">
-        <label for="Name">NAME</label>
-        <input type="text" name="name" id="pet-name">
+        <label for="name">NAME</label>
+        <input type="text" name="submitter" id="pet-name">
         <label for="Name">FACTS</label>
-        <input type="text" name="information" id="pet-information">
+        <input type="text" name="fact" id="pet-information">
         <input type="submit" value="submit" placeholder="Submit">
     </form>
     <p><a href="/pets/"> << Return to Pets</a></p>
